# platform-armada-app

./: .gitignore  .gitreview  .zuul.yaml  HACKING.rst  centos_iso_image.inc  centos_pkg_dirs  debian_bullseye_iso_image_std.inc  debian_pkg_dirs  tox.ini
platform-helm/debian/: meta_data.yaml
platform-helm/debian/deb_folder/: changelog  control  rules
platform-helm/debian/deb_folder/patches/: series  (+16 more)
python-k8sapp-platform/centos/: build_srpm.data  python-k8sapp-platform.spec
python-k8sapp-platform/debian/: meta_data.yaml
python-k8sapp-platform/debian/deb_folder/: control  python3-k8sapp-platform-wheels.install  python3-k8sapp-platform.install  rules
python-k8sapp-platform/k8sapp_platform/: pylint.rc  requirements.txt  setup.cfg  tox.ini
python-k8sapp-platform/k8sapp_platform/k8sapp_platform/armada/: manifest_platform.py
python-k8sapp-platform/k8sapp_platform/k8sapp_platform/common/: __init__.py  constants.py
python-k8sapp-platform/k8sapp_platform/k8sapp_platform/helm/: ceph_fs_provisioner.py  ceph_pools_audit.py  helm_toolkit.py  rbd_provisioner.py
python-k8sapp-platform/k8sapp_platform/k8sapp_platform/lifecycle/: lifecycle_platform.py
python-k8sapp-platform/k8sapp_platform/k8sapp_platform/tests/: test_plugins.py
python3-k8sapp-platform/debian/: meta_data.yaml
python3-k8sapp-platform/debian/deb_folder/: control  rules
python3-k8sapp-platform/k8sapp_platform/: .stestr.conf  README.rst  setup.cfg  setup.py  tox.ini
stx-platform-helm/centos/: build_srpm.data  stx-platform-helm.spec
stx-platform-helm/debian/: dl_hook  meta_data.yaml
stx-platform-helm/debian/deb_folder/: changelog  control  copyright  rules  stx-platform-helm.install
stx-platform-helm/stx-platform-helm/files/: metadata.yaml
stx-platform-helm/stx-platform-helm/fluxcd-manifests/: kustomization.yaml
stx-platform-helm/stx-platform-helm/helm-charts/: Makefile
stx-platform-helm/stx-platform-helm/manifests/: manifest.yaml
(+94 files in other folders)
