[metadata]
name = k8sapp-platform
summary = StarlingX sysinv extensions for platform-integ-apps
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    k8sapp_platform

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    platform-integ-apps = systemconfig.helm_plugins.platform_integ_apps

systemconfig.helm_plugins.platform_integ_apps =
    001_helm-toolkit = k8sapp_platform.helm.helm_toolkit:HelmToolkitHelm
    002_rbd-provisioner = k8sapp_platform.helm.rbd_provisioner:RbdProvisionerHelm
    003_ceph-pools-audit = k8sapp_platform.helm.ceph_pools_audit:CephPoolsAuditHelm
    004_cephfs-provisioner = k8sapp_platform.helm.ceph_fs_provisioner:CephFSProvisionerHelm

systemconfig.armada.manifest_ops =
    platform-integ-apps = k8sapp_platform.armada.manifest_platform:PlatformArmadaManifestOperator

systemconfig.fluxcd.kustomize_ops =
    platform-integ-apps = k8sapp_platform.kustomize.kustomize_platform:PlatformFluxCDKustomizeOperator

systemconfig.app_lifecycle =
    platform-integ-apps = k8sapp_platform.lifecycle.lifecycle_platform:PlatformAppLifecycleOperator

[wheel]
universal = 1
